--- a/app/products/templates/products/product_lists.html
+++ b/app/products/templates/products/product_lists.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<ul>{% for object in object_lists %}
+<ul>{% for object in object_list %}
         <li>
             {{ object.id}} - <a href='{{ object.get_absolute_url }}'>{{object.title}}</a> 
             <p>{{ object.description }}</p>
